WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265040
Links using a border-bottom instead of text-decoration should still get the default InteractionRegion border-radius
https://bugs.webkit.org/show_bug.cgi?id=265040
Summary
Links using a border-bottom instead of text-decoration should still get the d...
Etienne
Reported
2023-11-17 07:53:49 PST
Links using a border-bottom instead of text-decoration should still get the default InteractionRegion border-radius
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-11-17 08:04:47 PST
<
rdar://problem/118173683
>
Etienne
Comment 2
2023-11-17 08:05:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20675
EWS
Comment 3
2023-11-27 13:28:35 PST
Committed
271167@main
(ce815ebcee43): <
https://commits.webkit.org/271167@main
> Reviewed commits have been landed. Closing PR #20675 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug