Links using a border-bottom instead of text-decoration should still get the default InteractionRegion border-radius https://bugs.webkit.org/show_bug.cgi?id=265040 <rdar://118173683>

Reviewed by Tim Horton.

Instead of opting out of the default radius if any visible border is
present, check to see if the visible borders form a box around the
element.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):
Introduce a specific check to gate the default radius and region
inflation instead of relying on `hasVisibleBoxDecorations()`.

* LayoutTests/interaction-region/inline-link-expected.txt:
* LayoutTests/interaction-region/inline-link.html:
Update the test to cover this case.

Canonical link: https://commits.webkit.org/271167@main